# symusic-benchmark

./: .gitignore  .gitmodules  LICENSE  README.md  abc_read_benchmark.csv  abc_write_benchmark.csv  benchmark.ipynb  benchmark.py  curve.ipynb  midi_read_benchmark.csv  midi_write_benchmark.csv  requirements.txt  show-pretty.ipynb  show.ipynb  synth.ipynb  xiyangxiaogu.mid
.github/workflows/: benchmark.yaml  benchmark_test.yaml
binding/: CMakeLists.txt  midifile.cpp  pyproject.toml
binding/midifile_cpp/: CMakeLists.txt  midifile.cpp  pyproject.toml
config/: toy.json  toy2.json  uniform_10_8.json  uniform_25_4.json  uniform_50_1.json
results/: miditoolkit_read.csv  miditoolkit_write.csv  music21_read.csv  music21_write.csv  symusic_read.csv  symusic_write.csv
results/legacy/: pretty_midi_read.csv  pretty_midi_write.csv
script/: benchmark.jl  benchmark.js  benchmark.py  install_partitura_dev.sh  log_version.py  prepare_dataset.py  prepare_dependency.jl  sample_dataset.py  top_slowest.py  visualize.py
